<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Truss Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_main">Truss</string>
    <string name="new_game_label">New truss</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="continue_label">Load a file</string>
    <string name="delete_label">Delete a file</string>
    <string name="about_text">Sudoku is logic-based number game.</string>
    <string name="about_title">About Sudoku</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="prefs_label">Preferences</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_bar_title">Action bar</string>
    <string name="action_bar_summary">Show action bar</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_summary">Show status bar</string>
    <string name="confirm_delete">Do you want to delete </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
